--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -33,6 +33,13 @@
   
       <!-- Submit Button -->
       <button type="submit" class="btn btn-primary w-100">Submit</button>
+
+      <div class="d-flex" >
+        <button class="btn btn-outline-primary"  (click)="_auth.loginWithPopup()">Log in</button>
+
+        <button class="btn btn-outline-primary" *ngIf="!(_auth.isAuthenticated$ | async)" (click)="_auth.loginWithPopup()">Log in</button>
+        <button class="btn btn-outline-primary" *ngIf="_auth.isAuthenticated$ | async" (click)="_auth.logout()">Log out</button>
+      </div>
     </form>
   </div>
   
